# pointcloud-viewer

./: .clang_complete  CMakeLists.txt  main.cc  matrixToEulerAngles.h  openglwindow.cc  openglwindow.h  qtviewer.cc  qtviewer.h  qtviewer.pro  readme.md  renderwindow.cc  renderwindow.h  resources.qrc
shader/: phong.frag  phong.vert  simple.frag  simple.vert  sprite.frag  sprite.vert
